# apple-health-export

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yaml-lint.yml  .yamllint  404.html  Cargo.toml  Dockerfile  README.md  compose.yaml  deny.toml  index.html  index.yaml  mkdocs.yml  next-steps.md
.docker/: otelcol.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-docs.yml  docker.yml
charts/apple-health-export/: Chart.yaml  values.yaml
charts/apple-health-export-serverless/: Chart.yaml  values.yaml
charts/apple-health-export-serverless/templates/: _env.tpl  knative-service.yaml  kserving-domain-mapping.yaml
charts/apple-health-export/templates/: common.yaml
docs/: index.md
search/: search_index.json
src/: auth.rs  config.rs  error.rs  handlers.rs  main.rs  metrics.rs  s3.rs  state.rs  telemetry.rs
